[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/hor-em-akhet_dead.png" type="Texture" id=1]
[ext_resource path="res://HorEmAkhetDead.gd" type="Script" id=2]

[sub_resource type="Shader" id=59]
code = "shader_type canvas_item;

uniform bool active = true;
uniform float luminance_threshold = 0.4;
uniform vec4 color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);

// Minimum alpha value to consider a pixel as \"visible\" (not fully transparent)
uniform float alpha_threshold = 0.01;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 new_color = previous_color;

	// Only modify the color if the pixel is not fully transparent and the shader is active
	if (active && previous_color.a > alpha_threshold) {
		float luminance = 0.299 * previous_color.r + 0.587 * previous_color.g + 0.114 * previous_color.b;

		// Apply the color if the luminance is above the threshold
		if (luminance > luminance_threshold) {
			new_color.rgb = color.rgb;
		}
	}

	COLOR = new_color;
}
"

[sub_resource type="ShaderMaterial" id=60]
resource_local_to_scene = true
shader = SubResource( 59 )
shader_param/active = true
shader_param/luminance_threshold = 0.4
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/alpha_threshold = 0.01

[sub_resource type="Animation" id=61]
resource_name = "Explode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.201, 0.4, 0.6, 0.8, 1, 1.1, 1.2, 1.5, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.654902, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.866667, 0.00392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.866667, 0.00392157, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.866667, 0.00392157, 1 ), Color( 1, 0.631373, 0, 1 ) ]
}

[sub_resource type="Animation" id=62]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[node name="HorEmAkhetDead" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 60 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Explode"
anims/Explode = SubResource( 61 )
anims/RESET = SubResource( 62 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 61, -94 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 115, -70 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 75, -40 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 39, 0 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 113, 24 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( 56, 38 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( -19, 33 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 97, -103 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 1 )
polygon = PoolVector2Array( 119, -5, 173, 65, 175, 85, 255, 96, 284, 119, 275, 128, 67, 129, 50, 139, -280, 140, -275, 70, -196, 20, 20, 11, 26, -12, 5, -33, 49, -117, 115, -124, 136, -104, 136, -92, 142, -44, 121, -29 )

[node name="NosePosition" type="Position2D" parent="."]
position = Vector2( 139, -67 )
